--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/blob": "^0.23.4",
     "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^11.0.20",
     "mongodb": "^6.5.0",
