--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.2.2",
     "@vercel/blob": "^0.23.4",
     "@vercel/speed-insights": "^1.0.10",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.0.20",
     "mongodb": "^6.5.0",
     "next": "14.1.3",
